Status handler returns all
