# docs/swagger.json
@@ -201,7 +201,7 @@
                     "200": {
                         "description": "The song that is playing right now",
                         "schema": {
-                            "$ref": "#/definitions/audio.SessionStats"
+                            "$ref": "#/definitions/pkg.SessionStats"
                         }
                     }
                 }
@@ -241,19 +241,6 @@
         }
     },
     "definitions": {
-        "audio.SessionStats": {
-            "type": "object",
-            "properties": {
-                "duration": {
-                    "description": "seconds",
-                    "type": "number"
-                },
-                "position": {
-                    "description": "seconds",
-                    "type": "number"
-                }
-            }
-        },
         "pkg.PlayDate": {
             "type": "object",
             "properties": {
@@ -273,6 +260,22 @@
                 },
                 "radio": {
                     "type": "boolean"
+                },
+                "song": {
+                    "$ref": "#/definitions/pkg.SessionStats"
+                }
+            }
+        },
+        "pkg.SessionStats": {
+            "type": "object",
+            "properties": {
+                "duration": {
+                    "description": "seconds",
+                    "type": "number"
+                },
+                "position": {
+                    "description": "seconds",
+                    "type": "number"
                 }
             }
         },
